appId: nl.amsterdam.app.dev
---
- runFlow:
    file: ../../shared/open-module-from-fresh-app-without-permissions.yaml
    env:
      ENVIRONMENT: Acceptance
      MODULE: HomeParkingModuleButton
- runScript: ../../scripts/credentials.js
- runFlow:
    file: ../shared/login.yaml
    env:
      REPORT_CODE: ${output.parkingVisitorReportCode}
      PIN_CODE: ${output.parkingVisitorPinCode}
- tapOn:
    id: "ParkingSessionShowVisitorSessionsButton"
- tapOn:
    id: "ParkingSessionShowVisitorSessionsFormLicensePlateInputFieldInput"
- inputText: "TEST1"
- scrollUntilVisible:
    element:
        id: "ParkingSessionShowVisitorSessionsFormSubmitButton"
- tapOn:
    id: "ParkingSessionShowVisitorSessionsFormSubmitButton"
- assertVisible: "Kenteken TEST1"
- tapOn:
    id: "ParkingGoToStartSessionBezoekersvergunningButton"
- assertVisible:
    id: "ParkingStartSessionVisitorPermitZoneParagraph"
- copyTextFrom:
    id: "ParkingVisitorLicensePlateInputFieldInput"
- assertTrue: ${maestro.copiedText === "TEST1"}
- assertVisible:
    id: "ParkingChooseParkingMachineButton"
- assertVisible:
    id: "ParkingChooseStartTimeButton"
- assertVisible:
    id: "ParkingChooseEndTimeButton"
- assertVisible:
    id: "ParkingStartSessionBezoekersvergunningButton"
- tapOn:
    id: "HeaderBackButton"
- assertVisible:
    id: "ParkingGoToStartSessionBezoekersvergunningButton"
- runFlow:
    file: "../navigation/permit-zone.yaml"