appId: nl.amsterdam.app.dev
---
- tapOn:
    id: "ParkingParkingHistoryButton"
- assertVisible: "Parkeergeschiedenis"
- tapOn:
    id: "ParkingSessionNavigationButton"
- assertVisible: "Parkeersessie"
- runFlow:
    file: '../shared/session-details.yaml'
    env:
        IS_PAID: ${IS_PAID}
        STATUS: 'complete'
- tapOn:
    id: HeaderBackButton