appId: nl.amsterdam.app.dev
---
- tapOn:
    id: 'ParkingLicensePlatesButton'

- assertVisible: 'Mijn kentekens'
- tapOn:
    id: 'ParkingAddLicensePlateHeaderButton'

- assertVisible: 'Kenteken'
- inputText: 'TEST1'
- tapOn:
    id: 'ParkingLicensePlateFormNameInputFieldInput'
- inputText: 'Test'
- tapOn:
    id: 'ParkingLicensePlateFormSubmitButton'

- assertVisible: '.*TEST1 - Test'
- tapOn: '.*TEST1 - Test'

- assertVisible: 'Kenteken'
- eraseText
- inputText: 'TEST2'
- tapOn:
    id: 'ParkingLicensePlateFormSubmitButton'

- assertVisible: '.*TEST2 - Test'
- tapOn: '.*TEST2 - Test'

- scrollUntilVisible:
    element:
      id: 'ParkingDeleteLicensePlateButton'
- tapOn:
    id: 'ParkingDeleteLicensePlateButton'
- extendedWaitUntil:
    visible: 'Verwijderen'
    timeout: 5000
- tapOn: 'Verwijderen'

- assertNotVisible: '.*TEST2 - Test'
