appId: nl.amsterdam.app.dev
---
- scrollUntilVisible:
    element: "Uw saldo"
- runFlow:
    file: './history.yaml'
    env:
        IS_PAID: ${IS_PAID}
- tapOn:
    id: HeaderBackButton
- runFlow:
    file: './license-plates.yaml'
- tapOn:
    id: HeaderBackButton
- runFlow:
    file: './payments.yaml'
- tapOn:
    id: HeaderBackButton
- runFlow:
    file: './permit-zone.yaml'