appId: nl.amsterdam.app.dev
---
- tapOn:
    id: ParkingGoToStartSessionKraskaartvergunningButton
- tapOn:
    id: 'ParkingChooseLicensePlateButton'
- waitForAnimationToEnd
- assertVisible:
    id: ParkingSessionAddLicensePlateSubmitButton
- runFlow:
    file: ../../shared/SaveLicensePlate.yaml
    env:
      LICENSE_PLATE: ${LICENSE_PLATE}
      VEHICLE_NAME: ${VEHICLE_NAME}
- tapOn:
    id: 'ParkingChooseEndTimeButton'
- swipe:
    from:
      id: TimeDurationSpinnerLine2
    direction: RIGHT
- tapOn:
    id: 'ParkingSessionEndTimeBottomSheetContentDoneButton'
- tapOn:
    id: 'ParkingChoosePaymentZoneButton'
- tapOn:
    id: 'ParkingSessionPaymentZoneRadioGroupT11VRadioButtonPhrase'
- tapOn:
    id: 'ParkingSessionPaymentZoneBottomSheetContentDoneButton'
- assertVisible:
    id: 'ParkingChooseLicensePlateTitle'
- scrollUntilVisible:
    element:
      text: 'Bevestig parkeersessie'
- extendedWaitUntil:
    visible:
      id: 'ParkingCostTitle'
- scrollUntilVisible:
    element:
      text: 'Bevestig parkeersessie'
- tapOn: 'Bevestig parkeersessie'
- tapOn:
    text: 'Sta toe|Allow'
    optional: true
- assertVisible:
    id: 'ParkingStartSessionSuccessAlert'
- tapOn:
    id: ParkingStartSessionSuccessAlertCloseIcon
