appId: nl.amsterdam.app.dev
---
- tapOn:
    id: "ParkingPermitContextSwitchButton"
- tapOn:
    id: "ParkingSelectPermitLogoutNavigationButton"
- tapOn:
    id: "ParkingAccountsByScope-11111111NavigationButton"
- tapOn:
    id: "ParkingAccountNameFormInputFieldInput"
- inputText: "Alias"
- tapOn:
    id: "ParkingAccountNameFormSubmitButton"
- assertVisible: "Alias"
- tapOn:
    id: "HeaderBackButton"
- assertVisible: "Alias.*"
- tapOn:
    id: "ParkingPermitContextSwitchButton"
- assertVisible: "Alias.*"
- tapOn:
    id: "ParkingSelectPermitCodevergunning-0-0TopTaskButton"