appId: nl.amsterdam.app.dev
---
- tapOn:
    id: ParkingSessionDetailsAdjustEndTimeButton
- tapOn:
    id: ParkingChooseEndTimeButton
- tapOn:
    id: ParkingSessionDurationIncreaseButton
- scrollUntilVisible:
    element:
      id: ParkingSessionEndTimeBottomSheetContentDoneButton
- tapOn:
    id: ParkingSessionEndTimeBottomSheetContentDoneButton
- scrollUntilVisible:
    element:
      id: ParkingEditSessionButton
- tapOn:
    id: ParkingEditSessionButton
- assertVisible:
    id: ParkingAdjustSessionSuccessAlert
