appId: nl.amsterdam.app.dev
---
- tapOn:
    id: 'ParkingChooseEndTimeButton'
- swipe:
    from:
      id: TimeDurationSpinnerLine2
    direction: RIGHT
- tapOn:
    id: 'ParkingSessionEndTimeBottomSheetContentDoneButton'
