appId: nl.amsterdam.app.dev
---
- scrollUntilVisible:
    element:
      id: ParkingChoosePaymentZoneButton
- tapOn:
    id: 'ParkingChoosePaymentZoneButton'
- tapOn:
    id: 'ParkingSessionPaymentZoneRadioGroupT11VRadioButtonPhrase'
- tapOn:
    id: 'ParkingSessionPaymentZoneBottomSheetContentDoneButton'
