appId: nl.amsterdam.app.dev
---
- tapOn:
    id: 'ParkingHomeLoginButton'
- tapOn:
    id: 'ParkingLoginFormReportCodeInputFieldInput'
- inputText: ${REPORT_CODE}
- tapOn:
    id: 'ParkingLoginFormPinCodeInputFieldInput'
- inputText: ${PIN_CODE}
- tapOn:
    id: 'ParkingLoginFormSubmitButton'
- tapOn:
    id: 'ParkingLoginScreenNextButton'
- repeat:
    times: 2
    commands:
      - runFlow: ../../shared/EnterAccessCode.yaml
- tapOn:
    id: 'ParkingLoginScreenNextButton'
- waitForAnimationToEnd
- runFlow: ../../shared/EnterAccessCode.yaml
- tapOn:
    id: AccessCodeBiometricsPermissionScreenDeclineButton
    optional: true
