appId: nl.amsterdam.app.dev
---
- tapOn:
    id: ParkingAddLicensePlateFormLicensePlateInputFieldInput
- inputText: ${LICENSE_PLATE}
- pressKey: Enter
- swipe:
    from:
      id: ParkingSessionAddLicensePlateSaveSwitch
    direction: RIGHT
- tapOn:
    id: ParkingAddLicensePlateFormNameInputFieldInput
- inputText: ${VEHICLE_NAME}
- pressKey: Enter
- tapOn:
    id: ParkingSessionAddLicensePlateSubmitButton
