appId: nl.amsterdam.app.dev
---
- tapOn: 'Kenteken ${LICENSE_PLATE}.*'
- tapOn:
    id: 'ParkingSessionDetailsStopButton'
- tapOn:
    text: Stoppen
    index: 0
    optional: true
- tapOn:
    text: Stoppen
    index: 1
    optional: true
- assertVisible:
    id: ParkingPermitSessionsActiveTitle
