appId: nl.amsterdam.app.dev

---
- tapOn:
    id: 'ParkingGoToStartSession.*Button'
- tapOn:
    id: ParkingChooseLicensePlateButton
- tapOn:
    id: ParkingAddLicensePlateFormLicensePlateInputFieldInput
- inputText: TEST1
- tapOn:
    id: ParkingSessionAddLicensePlateSubmitButton
- runFlow:
    when:
      true: ${IS_PAID == 'true'}
    commands:
      - tapOn:
          id: ParkingChooseParkingMachineButton
      - tapOn:
          id: ParkingPermitZoneHeaderButton
      - runFlow:
          file: '../../shared/close-keyboard.yaml'
      - tapOn:
          id: ParkingSessionUseFavoriteMachineButton
      - tapOn:
          id: SelectParkingMachineButton
- runFlow: './choose-end-time-scrollwheel.yaml'
- scrollUntilVisible:
    element:
      id: ParkingStartSession.*Button
- tapOn:
    id: ParkingStartSession.*Button
- tapOn:
    text: 'Sta toe|Allow'
    optional: true
- runFlow: '../../shared/close-survey.yaml'
- assertVisible:
    id: 'ParkingStartSessionSuccessAlert'
- tapOn:
    id: ParkingStartSessionSuccessAlertCloseIcon
