appId: nl.amsterdam.app.dev
---
- tapOn:
    id: "ManageVisitorChooseTimeAddOnButton"
- tapOn:
    id: "ParkingSessionAmountBottomSheetContentRadioGroup7200RadioButton"
- tapOn:
    id: "ParkingSessionAmountBottomSheetContentDoneButton"
- copyTextFrom:
    id: "ManageVisitorChooseTimeAddOnButtonText"
- assertTrue: ${maestro.copiedText === "- 2 uur"}
- copyTextFrom:
    id: "ManageVisitorTimeBalanceMutationAmountTitle"
- assertTrue: ${maestro.copiedText === "- 2 uur"}
- tapOn:
    id: "ManageVisitorTimeBalanceSubmitButton"
- tapOn:
    id: "ParkingManageVisitorAdjustTimeBalanceSuccessAlert"
