appId: nl.amsterdam.app.dev
---
- runFlow:
    label: Clean start app
    file: ../shared/open-module-from-fresh-app.yaml
    env:
      ENVIRONMENT: Test
      MODULE: HeaderUserIcon

- runFlow:
    label: Check "Over deze app"
    commands:
      - tapOn:
          id: UserNavigationToAboutButton
      - scrollUntilVisible:
          element:
            id: UserAboutScreenFeedbackButton
      - tapOn:
          id: UserAboutScreenFeedbackButton
      - assertVisible: "Uw mening"
      - tapOn:
          id: HeaderBackButton
      - tapOn:
          id: HeaderBackButton

- runFlow:
    label: Check "Privacyverklaring"
    commands:
      - tapOn:
          id: UserNavigationToPrivacyStatementButton
      - waitForAnimationToEnd
      - tapOn:
          id: HeaderBackButton

- runFlow:
    label: Check "Toegankelijkheidsverklaring"
    file: ./utils/accessibility-statement.yaml

- runFlow:
    label: "Check copy buttons"
    commands:
      - tapOn:
          id: AboutVersionNumberText
      - assertVisible: Gekopieerd

      - tapOn:
          id: AboutInstallationIdText
      - assertVisible: Gekopieerd
