appId: nl.amsterdam.app.dev
---
- assertVisible:
    id: NotificationSettingparkingLoginNavigationButton

- runFlow:
    file: '../../../parking/shared/login.yaml'
    env:
      EXTERNAL_LOGIN_LINK_ID: NotificationSettingparkingLoginNavigationButton
      REPORT_CODE: ${output.parkingVisitorPermitHolderReportCode}
      PIN_CODE: ${output.parkingVisitorPermitHolderPinCode}

- tapOn:
    id: HeaderBackButton
- extendedWaitUntil:
    notVisible:
      id: NotificationSettingsPleaseWait
    timeout: 60000
