appId: nl.amsterdam.app.dev
---
- tapOn:
    id: AddressAddButton
- waitForAnimationToEnd

- inputText: ${ADDRESS}

- assertVisible:
    id: AddressStreetInputSearchField

- runFlow:
    label: Enter address
    file: '../../shared/SelectAddressResult.yaml'
    env:
      ADDRESS: ${ADDRESS}
      BAGID: ${BAGID}
