appId: nl.amsterdam.app.dev
---
- scrollUntilVisible:
    element:
      id: UserAccountCityPassModuleTitle

- assertVisible:
    id: UserAccountCityPassModuleTitle

- scrollUntilVisible:
    element:
      id: UserAccountCityPassLoginButton

- tapOn:
    id: UserAccountCityPassLoginButton

- extendedWaitUntil:
    visible:
      id: CityPassDashboardScreen

- assertVisible:
    id: CityPassLoginButton

- scrollUntilVisible:
    element:
      id: CityPassRequestCityPassExternalLinkButton

- runFlow:
    file: '../../shared/handle-external-link-button.yaml'
    env:
      ID: CityPassRequestCityPassExternalLinkButton

- tapOn:
    id: HeaderBackButton
