appId: nl.amsterdam.app.dev
---
- scrollUntilVisible:
    element:
      id: UserAccountParkingModuleTitle

- assertVisible:
    id: UserAccountParkingModuleTitle

- scrollUntilVisible:
    element:
      id: UserAccountParkingLoginButton

- tapOn:
    id: UserAccountParkingLoginButton
- extendedWaitUntil:
    visible:
      id: ParkingLoginScreen
- tapOn:
    id: HeaderBackButton

- tapOn:
    id: UserAccountParkingModuleTitle
- waitForAnimationToEnd

- runScript: ../../scripts/credentials.js
- runFlow:
    file: '../../parking/shared/login.yaml'
    env:
      REPORT_CODE: ${output.parkingVisitorPermitHolderReportCode}
      PIN_CODE: ${output.parkingVisitorPermitHolderPinCode}

- tapOn:
    id: HeaderBackButton
- waitForAnimationToEnd
- assertVisible:
    text: '^U bent ingelogd met,? \d+ accounts?$'
