appId: nl.amsterdam.app.dev
---
- tapOn:
    id: AddressStreetInputSearchField
- inputText: ${ADDRESS}
- runFlow:
    label: Enter address
    file: './SelectAddressResult.yaml'
    env:
      ADDRESS: ${ADDRESS}
      BAGID: ${BAGID}

- runFlow:
    when:
      true: ${!!ID && SAVEASMYADDRESS === 'Yes'}
    label: Save as my address
    commands:
      - assertVisible:
          id: ${ID}AddressSwitchMapMarkerIcon
      - tapOn:
          id: AddressSwitchSaveMyAddressButton
      - assertVisible:
          id: ${ID}AddressSwitchHouseIcon
      - assertVisible:
          id: AddressSaveMyAddressSuccessAlert
      - tapOn:
          id: AddressSaveMyAddressSuccessAlert

- runFlow:
    when:
      true: ${!!ID && SAVEASMYADDRESS === 'No'}
    label: Do not save as my address
    commands:
      - assertVisible:
          id: ${ID}AddressSwitchMapMarkerIcon
      - tapOn:
          id: AddressSwitchDeclineMyAddressButton
      - assertVisible:
          id: ${ID}AddressSwitchMapMarkerIcon
      - assertNotVisible:
          id: AddressSaveMyAddressSuccessAlert
